# memoir

./: .gitignore  .ocamlformat  CNAME  Makefile  dune  dune-project  memoir.opam  readme.md
.github/workflows/: gh-pages.yml
_site/: .build-cache  index.html
_site/about/: index.html
_site/blog/: index.html
_site/blog/getting-started-with-ocaml/: index.html
_site/code-test/: index.html
_site/contact/: index.html
_site/journal/: index.html
_site/journal/day-1-setting-up-memoir/: index.html
_site/pages/index/: index.html
_site/pages/test/: index.html
_site/projects/: index.html
_site/static/css/: highlight.css  main.css
_site/static/js/: highlight.min.js
content/pages/: index.md  test.md
guidelines/: plan.md  requirements.md  tasks.md
lib/: dune  memoir_lib.ml
lib/content/: content_loader.ml  dune  markdown_parser.ml  routing.ml
lib/templates/: dune  footer.ml  header.ml  navigation.ml  seo.ml  template_base.ml  templates.ml
lib/types/: content_types.ml  dune
static/: index.html
static/css/: main.css
static/js/: main.js  theme-toggle.js
test/: dune  test_suite.ml
test/client/: client_tests.ml  dune
test/content/: content_tests.ml  dune
test/generator/: dune  generator_tests.ml
test/helpers/: dune  test_helpers.ml
test/templates/: dune  template_tests.ml
